apps/parent-child-test/web-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-app-service
  labels:
    app: web-app
    app.kubernetes.io/name: web-app
    app.kubernetes.io/part-of: parent-child-testing
spec:
  selector:
    app: web-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    name: http
  type: ClusterIP
